@@ -1,3 +1,6 @@
+22/11/15
+  Fix for window not unmapping when client_to_desktop used
+
 21/11/15
   Added reserved CMD in key.conf, barrtclickcmd, for right clicking 
   the bar to run a command
